1. Fixed bug that Tree with V/H_SCROLL style failed to initialize 2. Fixed bug that new Shell always locates in (0, 0) 3. Fixed bug that Shell#pack get incorrect size 4. Fixed bug that Link/Label does not have button face background color by default. 5. Temporarily fixed bug that Menu's width is too large in IE.

--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Group.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Group.css
@@ -3,6 +3,7 @@
 	font-family:Arial, sans-serif;
 	font-size:8pt;
 	overflow:hidden;
+	background-color:buttonface;
 }
 .group-border-default {
 	border:2px inset white;
