--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Label.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Label.css
@@ -7,6 +7,7 @@
 	font-family:Tahoma, Arial, sans-serif;
 	font-size:8pt;
 	overflow:hidden;
+	background-color:buttonface;
 }
 .label-default span span {
 	text-decoration:underline;
