--- a/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Link.css
+++ b/trunk/sources/net.sf.j2s.java.org.eclipse.swt/src/org/eclipse/swt/widgets/Link.css
@@ -7,6 +7,7 @@
 	font-size:8pt;
 	white-space:normal;
 	overflow:hidden;
+	background-color:buttonface;
 }
 .link-default a {
 	color:rgb(0,51,153);
